# bugbane

./: .dockerignore  .gitignore  Changelog.md  Dockerfile  README.base.md  README.md  README.ru.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
bugbane/: __main__.py  dev_notes.md  version.py
bugbane/modules/: __init__.py  build_type.py  builds.py  corpus_utils.py  credentials.py  factory.py  file_utils.py  format.py  format_utils.py  fuzz_data_suite.py  log.py  process.py  string_utils.py
bugbane/modules/fuzz_dict/: dict_processor.py
bugbane/modules/fuzzer_cmd/: __init__.py  aflplusplus.py  factory.py  fuzzer_cmd.py  gofuzz.py  gotest.py  libfuzzer.py
bugbane/modules/fuzzer_info/: __init__.py  aflplusplus.py  factory.py  fuzzer_info.py  gofuzz.py  gotest.py  libfuzzer.py
bugbane/modules/stats/: factory.py  stats.py
bugbane/modules/stats/coverage/: __init__.py  coverage_stats.py  factory.py  go.py  lcov.py  llvm_summary.py
bugbane/modules/stats/fuzz/: __init__.py  aflplusplus.py  factory.py  fuzz_stats.py  gofuzz.py  gotest.py  libfuzzer.py
bugbane/tests/: deps.sh  integration.Dockerfile  multi.Dockerfile
bugbane/tests/builder/: test_builder.py
bugbane/tests/corpus/: test_minimizers.py
bugbane/tests/coverage/: test_coverage.py  test_go_postprocess.py
bugbane/tests/fuzz/: test_cmds.py  test_dictionaries.py  test_stop_conditions.py
bugbane/tests/modules/: test_coverage_stats.py  test_credentials.py  test_factories.py  test_file_utils.py  test_format.py  test_fuzz_stats.py  test_fuzzer_info.py  test_process.py  test_string_utils.py
bugbane/tests/reproduce/: conftest.py  test_bugsamplesaver.py  test_env.py  test_reproduce_specs.py  test_reproducers.py  test_title.py  test_trace_utils.py
bugbane/tests/tools/builder/: test_builder.py
bugbane/tests/tools/corpus/: test_afl_cmin_minimizer.py  test_libfuzzer_minimizer.py  test_minimizers.py
bugbane/tools/builder/: args.py  main.py
bugbane/tools/corpus/: args.py  main.py  minimize_tools.py
bugbane/tools/coverage/: args.py  llvm_gcov_tool.py  main.py
bugbane/tools/fuzz/: args.py  command_utils.py  dict_utils.py  fuzz_box.py  fuzz_config.py  main.py  screen_dumps.py  stop_conditions.py
bugbane/tools/report/: args.py  main.py
bugbane/tools/reproduce/: args.py  bugsamplesaver.py  harvester.py  issue_card.py  main.py  results.py  trace_utils.py  verdict.py
bugbane/tools/send/: args.py  defectdojo_sender.py  main.py
docs/: Doxyfile  changes.md
(+57 files in other folders)
