[metadata]
name = bugbane
version = 0.4.4
author = Valery Korolyov
author_email = fuzzah@tuta.io
url = https://github.com/gardatech/bugbane

description = application security tools for DAST
long_description = file: README.md
long_description_content_type = text/markdown

license = Apache-2.0
license_file = LICENSE

classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Typing :: Typed
    Framework :: Pytest
    Framework :: tox
    Topic :: Security
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
python_requires = >=3.6
packages = find:

# TODO: figure out how to make defectdojo_api optional in [dd] group
install_requires =
    beautifulsoup4
    lxml
    defectdojo_api @ git+https://github.com/DefectDojo/defectdojo_api@6f6d5e31dd2855e3e15d756b3a01a7dd8d77fdf9
    typing; python_version < "3.6"
    dataclasses; python_version < "3.7"

[options.extras_require]
all =
    %(dd)s
    %(reporting)s
    %(test)s

dev =
    %(all)s
    %(test)s
    black
    build
    coverage
    pylint
    tox
    rope
    wheel

test =
    pytest
    pytest-mock

dd =
    requests
    # this doesn't work
    # defectdojo_api @ git+https://github.com/DefectDojo/defectdojo_api@6f6d5e31dd2855e3e15d756b3a01a7dd8d77fdf9

reporting =
    Jinja2
    selenium
    WeasyPrint == 52.5


[options.entry_points]
console_scripts =
    bugbane = bugbane.__main__:main
    bb-corpus = bugbane.tools.corpus.main:main
    bb-build = bugbane.tools.builder.main:main
    bb-fuzz = bugbane.tools.fuzz.main:main
    bb-coverage = bugbane.tools.coverage.main:main
    llvm-gcov-tool = bugbane.tools.coverage.llvm_gcov_tool:main
    bb-reproduce = bugbane.tools.reproduce.main:main
    bb-send = bugbane.tools.send.main:main [dd]
    bb-report = bugbane.tools.report.main:main [reporting]
    bb-screenshot = bugbane.tools.report.screenshot.main:main [reporting]

[options.package_data]
bugbane.tools.report =
    templates/*

[coverage:run]
branch = True
source = ./bugbane
omit = */tests/*

[coverage:report]
skip_empty = True

[pylint]
disable =
    invalid-name,
    missing-module-docstring,
    missing-function-docstring,
